fix: sometimes images are distorted

--- a/src/layouts/main-layout.module.scss
+++ b/src/layouts/main-layout.module.scss
@@ -13,6 +13,15 @@
   border-bottom: 1px solid var(--color-border);
 }
 
+.avatarContainer {
+  width: 36px;
+  height: 36px;
+
+  .avatar {
+    // placeholder
+  }
+}
+
 .main {
   min-height: calc(100vh - var(--header-height));
   padding-top: 1px;
